# OpenTTT

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT_GUIDE.md  LICENSE  OVERNIGHT_REPORT.md  PHASE0_BLOCKERS.md  PHASE1_WIRING.md  PROGRESS.md  README.md  SDK_GUIDE.md  SECURITY.md  YELLOW_PAPER.md  audit_report_full.txt  package-lock.json  package.json  tsconfig.json
contracts/: DEPLOYED.md  deployment_base_sepolia.json  hardhat.config.ts  package-lock.json  package.json
coverage/: clover.xml  coverage-final.json  lcov.info
dashboard/: index.html  style.css
demo/: GRGExplainer.tsx  index.html
docs/: DEX_DEVELOPER_GUIDE.md  ONBOARDING.md  TRUST_NETWORK_STRATEGY.md
examples/: 01-quickstart.ts  02-monitoring.ts  03-builder.ts  04-turnkey-signer.ts  05-flashbots-protect.ts  custom-rpc.ts  full-control.ts  quickstart.ts
integrations/langchain/: LANGCHAIN_PR.md  PR_DESCRIPTION.md  README.md  pyproject.toml  ttt_pot_tool.ts
integrations/langchain/langchain_openttt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/: Dockerfile  MCP_MARKETPLACE_PR.md  README.md  mcp_bot_loop.sh  package.json  server.json  tools.ts
reports/: 20260314_audit_results.md  20260314_execution_plan_audit_analysis.md  20260314_hook_system_full_audit.md  20260314_sdk_onboarding_ux_research.md  20260314_tls_expansion_research.md  20260314_yellow_paper_updated.md  20260315_devto_mcp_article.md  20260315_flashbots_research_article.md  20260315_launch_readiness_report.md  20260315_phase2_execution_plan.md  20260315_substack_article.md  20260315_telegram_report.md  20260315_three_tasks_report.md  20260315_trust_network_report.md  (+3 more)
wasm/grg-wasm/: Cargo.toml
wasm/grg-wasm/pkg/: grg_wasm.d.ts  grg_wasm.js  grg_wasm_bg.wasm  package.json
wasm/grg-wasm/src/: golay.rs  grg.rs  hmac_key.rs  lib.rs  reed_solomon.rs
(+217 files in other folders)
