[package]
name = "grg-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
hmac = "0.12"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
